@@ -5,7 +5,7 @@ use Test::More;
 
 get '/subdir/:id' => sub {
   my ($c) = @_;
-  $c->render(text => 'ID: '. $c->stash('id'). ' x='. ($c->param('x')||''));
+  $c->render(text => 'ID: '. $c->stash('id'). ' param x='. ($c->param('x')||''));
 };
 
 my $t = Test::Mojo->new;
@@ -15,7 +15,8 @@ Mojolicious::Command::proxy->proxy(app, '', '/subdir'); # more specific first
 
 $t->get_ok('/proxy/2')->content_like(qr/ID: 2/);
 $t->get_ok('/2')->content_like(qr/ID: 2/);
-$t->get_ok('/2?x=hello')->content_like(qr/x=hello/);
+$t->get_ok('/2?x=hello')->content_like(qr/param x=hello/);
+$t->get_ok('/?x=hello')->content_like(qr/param x=hello/);
 $t->get_ok('/%253A')->content_like(qr/ID: %3A/);
 
 done_testing;
